# stock-trading-assistant

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
backend/: Dockerfile  config.py  main.py
backend/ai/: client.py  gemini_client.py  multi_model.py  prompts.py  trade_reasoning.py
backend/api/v1/: assets.py  backfill.py  congress.py  inference.py  portfolio.py  signals.py
backend/ingestion/: alpha_vantage.py  base.py  binance.py  coingecko.py  congress.py  earnings_transcript.py  finnhub.py  newsapi.py  newsdata.py  polygon.py  reddit.py  sec_edgar.py  yahoo_finance.py
backend/ml/: signal_generator.py
backend/ml/sentiment/: finbert.py
backend/models/: asset.py  congress_trade.py  earnings_transcript.py  insider_trade.py  news.py  ohlcv.py  portfolio.py  signal.py  social_post.py
backend/processing/: deduplicator.py  feature_engineer.py
backend/tasks/: celery_app.py  ingestion_tasks.py  ml_tasks.py
flink-kotlin/: pom.xml
flink/producers/: news_producer.py  price_producer.py
frontend/: .env.example  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: NextActions.tsx  OverallProgress.tsx  ProgressBar.tsx  RateLimitBadge.tsx  SourceCard.tsx  TaskTable.tsx
frontend/src/hooks/: useBackfillState.ts
frontend/src/types/: backfill.ts
scripts/: backfill_historical.py  backfill_manager.py  backfill_ohlcv.py  build_training_dataset.py  seed_assets.py
tests/: conftest.py
tests/test_ml/: test_signal_generator.py
(+6 files in other folders)
